server/Test output.txt
PS C:\Users\Mixue\Desktop\UTD\2024 Fall\CS3354\teamProject\src> python .\data_manager.py
PS C:\Users\Mixue\Desktop\UTD\2024 Fall\CS3354\teamProject\src> python .\data_manager_test.py
  File "C:\Users\Mixue\Desktop\UTD\2024 Fall\CS3354\teamProject\src\data_manager_test.py", line 7
    print('Get all classes
          ^
SyntaxError: unterminated string literal (detected at line 7)
PS C:\Users\Mixue\Desktop\UTD\2024 Fall\CS3354\teamProject\src> python .\data_manager_test.py
Connecting to database...
----------------------
Get all classes
----------------------
[Course(classNumber='CS4348', className='Operating Systems Concepts', major='CS', prerequisites=['CS2340', 'CS3377', 'CS3345']), Course(classNumber='MATH2419', className='Integral Calculus or Calculus II', major='MATH', prerequisites=['MATH2413']), Course(classNumber='MATH2418', className='Linear Algebra', major='MATH', prerequisites=['MATH2413']), Course(classNumber='CS1436', className='Program Fundamentals', major='CS', prerequisites=[]), Course(classNumber='CS4485', className='Computer Science Project', major='CS', prerequisites=['CS3345', 'CS3354']), Course(classNumber='CS3341', className='Probability & Statisctics in CS/SE', major='CS', prerequisites=['MATH2414', 'CS2305', 'MATH2418']), Course(classNumber='CS1200', className='Intro to CS and SE', major='CS', prerequisites=[]), Course(classNumber='ECS1100', className='Intro to Engineering and CS', major='CS', prerequisites=[]), Course(classNumber='CS4337', className='Organization of Programming Lang', major='CS', prerequisites=['CS2336', 'CS2305', 'CS2340']), Course(classNumber='CS3354', className='Software Engineering', major='CS', prerequisites=['CS2336', 'CS2305']), Course(classNumber='MATH2417', className='Differenttial Caculus or Calculus I', major='MATH', prerequisites=[]), Course(classNumber='CS2336', className='Computer Science II', major='CS', prerequisites=['CS1337']), Course(classNumber='CS4141', className='Digital Systems Laboratory', major='CS', prerequisites=[]), Course(classNumber='CS2305', className='Discrete Mathematics for Computing I', major='CS', prerequisites=['MATH2413']), Course(classNumber='PHYS2325', className='Mechanics', major='PHYS', prerequisites=['MATH2413', 'MATH2417']), Course(classNumber='CS3345', className='Data Structures & Intro to Algorithmic Analysis', major='CS', prerequisites=['CS2336', 'CS2337', 'CS2305']), Course(classNumber='CS2337', className='Computer Science II', major='CS', prerequisites=[]), Course(classNumber='MATH2413', className='Differenttial Caculus or Calculus I', major='MATH', prerequisites=[]), Course(classNumber='PHYS2326', className='Electromagnetism and Waves', major='PHYS', prerequisites=['PHYS2325', 'PHYS2125', 'MATH2414']), Course(classNumber='CS3162', className='Professional Responsibility in CS/SE', major='CS', prerequisites=[]), Course(classNumber='CS4341', className='Digital Logic and Computer Design', major='CS', prerequisites=['PHYS2326', 'PHYS2126', 'CS2340']), Course(classNumber='CS4384', className='Automata Theory', major='CS', prerequisites=['CS2305']), Course(classNumber='ECS2390', className='Professional & Technical Communication', major='CS', prerequisites=[]), Course(classNumber='PHYS2126', className='Physics Laboratory II', major='PHYS', prerequisites=['PHYS2325', 'PHYS2125', 'MATH2414']), Course(classNumber='CS1337', className='Computer Science I', major='CS', prerequisites=['CS1426']), Course(classNumber='CS2340', className='Computer Architercture', major='CS', prerequisites=['CS1337', 'CS2305']), Course(classNumber='CS3377', className='C/C++ Programmming in a UNIX Envirn', major='CS', prerequisites=['CS2336']), Course(classNumber='MATH2414', className='Integral Calculus or Calculus II', major='MATH', prerequisites=['MATH2413']), Course(classNumber='PHYS2125', className='Physics Laboratory', major='PHYS', prerequisites=['MATH2413', 'MATH2417']), Course(classNumber='CS4347', className='Database Systems', major='CS', prerequisites=['CS3345']), Course(classNumber='CS4349', className='Adv Algorithm Design & Analysis', major='CS', prerequisites=['CS2305', 'CS3345'])]

----------------------
Get single class
----------------------
classNumber='CS3345' className='Data Structures & Intro to Algorithmic Analysis' major='CS' prerequisites=['CS2336', 'CS2337', 'CS2305']
PS C:\Users\Mixue\Desktop\UTD\2024 Fall\CS3354\teamProject\src>